--- a/feedback-continuo/public/index.html
+++ b/feedback-continuo/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Feedback contínuo</title>
+    <title>Feedback</title>
   </head>
   <body>
     <noscript>Habilite o JavaScript para executar este site.</noscript>
